--- a/src/styles/Packages.css
+++ b/src/styles/Packages.css
@@ -116,8 +116,8 @@
 }
 
 .package-icon {
-  font-size: 3rem;
-  margin-bottom: 8px;
+  font-size: 5rem;
+  margin-top: -30px;
   filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.1));
 }
 
@@ -277,7 +277,8 @@
   }
   
   .package-icon {
-    font-size: 2.5rem;
+    font-size: 4.5rem;
+    margin-top: 10px;
   }
   
   .package-content {
@@ -317,7 +318,8 @@
   }
   
   .package-icon {
-    font-size: 2rem;
+    font-size: 4.5rem;
+    margin-top: -20px;
   }
   
   .package-content {
